# ixp

./: LICENSE.txt  README.md  main.py  mot_results.csv  nasa_tlx_results.csv  pyproject.toml  sart_results.csv  tempCodeRunnerFile.py  tempCodeRunnerFile.python  utils.py  vs_results.csv
ixp/: __init__.py  experiment.py  instruction.py  lab_recorder.py  main.py  participant.py  runner.py  sensor.py  task.py  tempCodeRunnerFile.py  utils.py
ixp/Surveys/: nasa_tlx.py  nasa_tlx_psychopy.py  nasa_tlx_pygame.py  sart.py
ixp/configs/: __init__.py  config.yaml  mot.config.yaml
ixp/individual_difference/: __init__.py  mot.py  utils.py  vs.py
ixp/individual_difference/surveys/: __init__.py  questionnaire.py
ixp/individual_difference/surveys/results/: survey_20260206T220154Z.json  survey_20260206T220719Z.json  survey_20260206T230800Z.json  survey_20260206T230910Z.json  survey_20260206T231648Z.json
ixp/recorder/: __init__.py  gui.py  recorder.py  xdf.py
ixp/sensors/: base_sensor.py  individual_differences_mot.py  individual_differences_vs.py
ixp/sensors/eye_tracker/: base_tracker.py  calibration.py  data.py  tobii.py  utils.py
ixp/surveys/: nasa_tlx.py  sart.py  utils.py
tests/: __init__.py  examples.py
tests/test_ixp/: __init__.py  test_main.py
