[tool.poetry]
name = "ixp"
version = "0.1.0"
description = "A Python package for running behavioral experiments at iHuman Lab"
authors = [
    "iHuman Lab <ihuman.research.lab@gmail.com>",
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/elaheoveisi/ixp"
keywords = ["experiments", "behavioral", "psychology", "eye-tracking", "lsl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.11",
]
packages = [{ include = "ixp" }]

[tool.poetry.dependencies]
python = "^3.11"
beartype = "^0.18.5"
icontract = "^2.7.1"
loguru = "^0.7.2"
pydantic = "^2.9"
ray = "^2.9"
pygame = "^2.5"
pylsl = "^1.16"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.11.2"
isort = "^5.13.2"
pre-commit = "^3.8.0"
ruff = "^0.6.7"


[tool.pytest.ini_options]
minversion = "7.3"
addopts = [
    "-ra",
    "-vvv",
    "-l",
    "--doctest-modules",
    "--color=yes",
    "--code-highlight=yes",
    # coverage makes the pycharm debugger not work
    #    "--cov",
    #    "--cov-branch",
    #    "--cov-fail-under=100",
    #    "--no-cov-on-fail",
    "--log-disable=faker",
    "--log-disable=asyncio",
]

testpaths = [".", "tests"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]
python_functions = ["it_*", "test_*"]
log_cli = true
log_cli_level = "WARNING"
log_auto_indent = true

# [tool.black]
# line-length = 120
# target-version = ['py311']
# skip-string-normalization = true

[tool.isort]
line_length = 120
profile = "black"
multi_line_output = 3
force_grid_wrap = 2

[tool.ruff.format]
quote-style = "single"

[tool.ruff]
select = ["ALL"]
ignore = [
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "DJ",  # django
    "EXE", # flake8-executable
    "T10", # debugger
    "TID", # flake8-tidy-imports

    #### specific rules
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "E402",   # false positives for local imports
    "E501",   # line too long
    "TRY003", # external messages in exceptions are too verbose
    "TD002",
    "TD003",
    "FIX002", # too verbose descriptions of todos
    "S311",
    "FBT003"
]

fixable = ["ALL"]
unfixable = []

fix = true

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py38"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]
"tests/**/*.py" = ["ANN201", "ANN001", "D100", "D103", "D104", "S101"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "single"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
